Camera BG jitter offset (regression) #91398

Closed
opened 2021-09-14 10:57:49 +02:00 by Jonas Törnros · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.63

Blender Version
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce
Broken: 2.82
Worked: 2.81a

Probably caused by 9516921c05 (this certainly broke between ba1e9ae473 & da6929488a)

Short description of error
Camera background jitters on large scene offsets.
bug_report_camera-bg-jitter-offset.zip

Exact steps for others to reproduce the error
To see the bug:

  • Unzip and open the file [bug_camera-bg-jitter-offset_v001.blend]
  • Select [SceneNode] in the [tracked_cam] collection, make sure Viewport Shading is in Material Preview-mode.
  • Click "Play Animation" in the timeline.
  • Look below in the Graph Editor. I have tracked a camera in another softwaware, imported it by FBX into Blender. Here to show the bug I have the tracked camera and its parent at origo and then at frame 300 I offset it all to x 100'000 by y 5'000 units. This to show the obvious jitter of the camera background at this extreme location.
  • Happily, this does not affect the actual camera position, as I first thought. But it does affect the viewport renders, making it useless for previews on large scenes, like landscapes.
  • Now you can switch between Material Preview and Rendered View and scrub the timeline to see the difference too.

Very best regards to all people in the team and greetings from Stockholm, Sweden,
Jonas Törnros (Bronze Dev. Fund contributor since dec. 2018)

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.63 **Blender Version** Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` Broken: 2.82 Worked: 2.81a Probably caused by 9516921c05 (this certainly broke between ba1e9ae473 & da6929488a) **Short description of error** Camera background jitters on large scene offsets. [bug_report_camera-bg-jitter-offset.zip](https://archive.blender.org/developer/F10411406/bug_report_camera-bg-jitter-offset.zip) **Exact steps for others to reproduce the error** To see the bug: - Unzip and open the file [bug_camera-bg-jitter-offset_v001.blend] - Select [SceneNode] in the [tracked_cam] collection, make sure Viewport Shading is in Material Preview-mode. - Click "Play Animation" in the timeline. - Look below in the Graph Editor. I have tracked a camera in another softwaware, imported it by FBX into Blender. Here to show the bug I have the tracked camera and its parent at origo and then at frame 300 I offset it all to x 100'000 by y 5'000 units. This to show the obvious jitter of the camera background at this extreme location. - Happily, this does not affect the actual camera position, as I first thought. But it does affect the viewport renders, making it useless for previews on large scenes, like landscapes. - Now you can switch between Material Preview and Rendered View and scrub the timeline to see the difference too. Very best regards to all people in the team and greetings from Stockholm, Sweden, Jonas Törnros (Bronze Dev. Fund contributor since dec. 2018)

Added subscriber: @Pewi

Added subscriber: @Pewi

#91678 was marked as duplicate of this issue

#91678 was marked as duplicate of this issue

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, this wasnt shaky in 2.81a, will try to find the culprit commit.

Can confirm, this wasnt shaky in 2.81a, will try to find the culprit commit.
Philipp Oeser changed title from Camera BG jitter offset to Camera BG jitter offset (regression) 2021-09-14 13:20:04 +02:00

Added subscriber: @vondorius

Added subscriber: @vondorius

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

@fclem, @Jeroen-Bakker: is this something you can look at?

@fclem, @Jeroen-Bakker: is this something you can look at?
Clément Foucault self-assigned this 2021-10-14 11:25:16 +02:00

This issue was referenced by 71799d46b4

This issue was referenced by 71799d46b4be335e2e0f62fb345e8e549503c50c

This issue was referenced by 42d79a6041

This issue was referenced by 42d79a6041a7e45efd9eee4613994bdb6090e028

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91398
There is no content yet.